<resources>
    <string name="app_name">Hotel</string>
    <string name="reserva">Reservar</string>
    <string name="web">Ver Sitio Web</string>
    <string name="titulo">Luxor Sheraton Hotel</string>
    <string name="descripcion">Es un complejo hoteles de cinco estrellas,
    con magnificas vistas. Tiene dos piscinas. Los precios de una habitacion varian entre los 50 a 100 dolares.</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="reservacion">Reservacion</string>
    <string name="confirmacion">Confirmar</string>
</resources>