<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_claro"
    tools:context=".PickerActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_background"
            android:fontFamily="sans-serif-condensed"
            android:padding="20dp"
            android:text="@string/titulo"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/title"
        android:id="@+id/caja1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contenedores_backgrond"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        >

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_margin="20dp"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/ape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:layout_margin="20dp"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/caja1"
        android:id="@+id/caja2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contenedores_backgrond"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservacion"
            android:layout_margin="20dp"
            android:textSize="17sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/spinner_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/opcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/descripcion_background"
        android:layout_marginTop="480dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/confirmacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/boton_background"
            android:width="250dp"
            android:text="@string/confirmacion"
            />



    </LinearLayout>

</RelativeLayout>